# forgecode

./: Cargo.toml
crates/forge_app/src/: orch.rs  title_generator.rs
crates/forge_app/src/dto/anthropic/: request.rs
crates/forge_app/src/dto/anthropic/transforms/: mod.rs  model_specific_thinking.rs  strip_unsupported_reasoning.rs
crates/forge_app/src/dto/openai/transformers/: make_fireworks_compat.rs  mod.rs  pipeline.rs  strip_unsupported_anthropic_reasoning.rs
crates/forge_app/src/transformers/: model_specific_reasoning.rs
crates/forge_config/: .forge.toml
crates/forge_domain/src/transformer/: mod.rs  strip_unsupported_reasoning.rs
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: mcp_client.rs
crates/forge_main/: Cargo.toml
crates/forge_main/src/: cli.rs  lib.rs  select_cmd.rs  ui.rs
crates/forge_repo/src/conversation/: conversation_repo.rs
crates/forge_repo/src/provider/: anthropic.rs  bedrock.rs  bedrock_strip_unsupported_reasoning.rs  mod.rs  provider.json
crates/forge_select/: Cargo.toml
crates/forge_select/src/: multi.rs  select.rs  widget.rs
crates/forge_services/src/: fd.rs
shell-plugin/lib/: completion.zsh  helpers.zsh
shell-plugin/lib/actions/: config.zsh  conversation.zsh  provider.zsh
